kubernetes/applications/planka/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planka
  labels:
    app: planka
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: planka
  replicas: 1
  template:
    metadata:
      labels:
        app: planka
    spec:
      containers:
        - name: planka
          image: ghcr.io/plankanban/planka:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 1337
          volumeMounts:
            - mountPath: "/app/data"
              name: planka-volume-mount
      volumes:
        - name: planka-volume-mount
          persistentVolumeClaim:
            claimName: planka-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: planka
spec:
  type: ClusterIP
  ports:
  - name: http
    targetPort: 1337
    port: 80
  selector:
    app: planka
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: planka
spec:
  routes:
    - kind: Rule
      match: Host(`planka.riichi.me`)
      priority: 10
      services:
        - name: planka
          port: 80
